# laptops-nix

./: .gitignore  LICENSE  README.md  autostart.sh  common.nix  configuration.nix  guest-account-path.patch  locale.patch  nicerslicer.nix  plasma-shortcuts.js  prefs.sh  site-gs.patch  test.nix  update.sh  ws1.nix  ws2.nix  ws3.nix
account-manager/: Cargo.toml  account_manager.py  build.rs  main.qml
account-manager/qml/: main.qml
account-manager/src/: account.rs  cxxqt_object.rs  devices.rs  main.rs
