[package]
name = "account-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
bb-drivelist = "0.3"
cxx = "1.0.95"
cxx-qt = "0.7"
cxx-qt-lib = { version="0.7", features = ["qt_full"] }
env_logger = "0.11"
log = "0.4"
nix = { version = "0.30", features = ["user"] }
rexpect = "0.6"


[build-dependencies]
cxx-qt-build = { version = "0.7" }
